fixing top navigation bar to display one item aligned totally left, one center, and one totally right

--- a/Assets/css/style-planning.css
+++ b/Assets/css/style-planning.css
@@ -26,6 +26,7 @@ body {
 
 .item2 {
     height: 300px;
+    height: 100vh;
 }
 
 .item3 {
@@ -37,44 +38,38 @@ body {
 }
 
 /* Styling for top navigation bar */
-.header {
+.top-navigation {
     text-align: center;
     position: absolute;
     background-color: rgba(0,0,0,0);
-    /* width: 100%; */
-    display: inline;
-    display: flex;
-    box-sizing: content-box
+    width: 100%;
 }
 
 ul, ol {
     list-style: none;
     text-align: center;
     display: flex;
-    justify-content: space-between;
     box-sizing: border-box;
-    
+    height:fit-content;
 }
 
 li {
     width: 100%;
+    height:fit-content;
     font-size: 20px;
     /* padding: 5px 5px; */
-    display: flex;
-    display: inline;
+    display: inline-block;
     justify-content: space-between;
-    box-sizing: border-box;
-    
-    
+    box-sizing: border-box;    
 }
 
 a {
     text-decoration: none;
     color: rgb(239, 230, 194);
-    padding: 7px;
+    padding: 10px 20px;
     font-family: 'Turret Road', cursive;
-    justify-content: space-between;
     font-size: 18px;
+    display: block;
 }
 
 /* This is the styling for MOONR8KER and other larger headings */
@@ -88,6 +83,20 @@ h1 {
 
 .logo {
     font-family: 'Turret Road';
+}
+
+.mapped {
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-self: center;
+    display:flex;
+}
+
+.planning {
+    align-items: flex-end;
+    justify-content: flex-end;
+    align-self: center;
+    display:flex;
 }
 
 .circle-shell-ufo-image {
