--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -10,43 +10,38 @@ body {
 }
 
 /* Styling for top navigation bar */
-.header {
+.top-navigation {
     text-align: center;
     position: absolute;
     background-color: rgba(0,0,0,0);
-    /* width: 100%; */
-    display: inline;
-    display: flex;
+    width: 100%;
 }
 
 ul, ol {
     list-style: none;
     text-align: center;
     display: flex;
-    justify-content: space-between;
     box-sizing: border-box;
-    
+    height:fit-content;
 }
 
 li {
     width: 100%;
+    height:fit-content;
     font-size: 20px;
     /* padding: 5px 5px; */
-    display: flex;
-    display: inline;
+    display: inline-block;
     justify-content: space-between;
-    box-sizing: border-box;
-    
-    
+    box-sizing: border-box;  
 }
 
 a {
     text-decoration: none;
     color: rgb(60, 64, 41);
-    padding: 7px;
+    padding: 10px 20px;
     font-family: 'Turret Road', cursive;
-    justify-content: space-between;
     font-size: 18px;
+    display: block;
 }
 
 /* This is the styling for MOONR8KER and other larger headings */
@@ -61,16 +56,19 @@ h1 {
 .logo {
     font-family: 'Turret Road';
 }
-
 .mapped {
-    text-align: left;
-    justify-items: left;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-self: center;
+    display:flex;
 }
 
-#planning {
-    text-align: right;
+.planning {
+    align-items: flex-end;
+    justify-content: flex-end;
+    align-self: center;
+    display:flex;
 }
-
 
 .col {
     padding: 0px;
@@ -84,7 +82,6 @@ h1 {
     height: 100vh;
     width: 100%;
     padding: 0px;
-    display: block;
 }
 
 /* Styling for right side of hero */
